lab1/Test/L1-A-13-56.output
Error Type B at Line 7
Error Type A at Line 11
Error Type A at Line 13
Error Type B at Line 15
Error Type B at Line 19
Error Type A at Line 20
Error Type B at Line 22
Error Type B at Line 31
Error Type A at Line 40
Error Type A at Line 48
